# piPlayerShell

./: .gitignore  CMakeLists.txt  README.md  REDEADME
lib/: CMakeLists.txt  list.c  list.h  queue.c  queue.h  sort.c  sort.h  terminal.c  terminal.h
src/: CMakeLists.txt  cmd.c  cmd.h  config.h  dir.c  dir.h  err.c  err.h  interface.c  interface.h  piPlayer.c  piPlayer.h  player.h
